--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -50,7 +50,7 @@
     .ui-resources-holder.pam
       .ui-container.table.auto
         .ui-container.table-cell.table-substance
-          = deco('polybox', mods: ['active'],
+          = deco('polybox_medres', mods: ['active'],
                   media_resources: @get.relations.child_media_resources)
 
 = deco('resource_show', res_show_data)
