--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -1,22 +1,25 @@
 :ruby
-  person_show_data = {
-    header: component('page-header',
-              icon: component('icon',
-                "icon-privacy-#{@get.bunch? ? 'group' : 'private'}-alt"),
-              text: @get.name
-    ),
-    overview: deco('resource_show_overview',
-                content: combo('metadata-box',
-                            mods: 'ui-summary-table.ui-set-summary.compact',
-                            list: ['first_name', 'last_name',
-                                   'pseudonym', 'date_of_birth', 'date_of_death'
-                                 ].map { |prop| [prop, @get.send(prop)] }
-                          )
-    ),
-    more_info: nil # captured below
-  }
+  person_show = {}
 
-- person_show_data[:more_info] = capture_haml do
+  person_show[:header] = \
+    component('page-header',
+      icon: component('icon',
+        "icon-privacy-#{@get.bunch? ? 'group' : 'private'}-alt"),
+      text: @get.name
+    )
+
+  person_show[:overview] = \
+    deco('resource_show_overview',
+      content: \
+        combo('metadata-box',
+          mods: 'ui-summary-table.ui-set-summary.compact',
+          list: ['first_name', 'last_name',
+                 'pseudonym', 'date_of_birth', 'date_of_death'
+                ].map { |prop| [prop, @get.send(prop)] }
+        )
+    )
+
+- person_show[:more_info] = capture_haml do
   -# TODO: component
   #ui-resources-list-container.ui-container.midtone.rounded-bottom
     .ui-container.inverted.ui-toolbar.pvx
@@ -30,4 +33,4 @@
                   media_resources: @get.related_media_resources_via_meta_data)
 
 
-= deco('resource_show', person_show_data)
+= deco('resource_show', person_show)
